# jupyterlab-save-py

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  publish.yml
jupyterlab_save_py/: __init__.py
schema/: plugin.json
src/: index.ts
style/: index.css
